Fixed window overflow issue with button SVG

--- a/src/modules/shared/components/header/navigation.module.scss
+++ b/src/modules/shared/components/header/navigation.module.scss
@@ -15,6 +15,7 @@
   width: rem(54);
   height: rem(54);
   cursor: pointer;
+  overflow: hidden;
   z-index: 4;
 
   svg {
